src/bootstrap/src/core/builder/cli_paths/snapshots/x_build_rustdoc.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: build rustdoc
---
[Build] tool::Rustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({"src/tools/rustdoc"})
