src/bootstrap/src/core/builder/cli_paths/snapshots/x_build_src_tools_rust_analyzer.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: build src/tools/rust-analyzer
---
[Build] tool::RustAnalyzer
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/tools/rust-analyzer})
[Build] tool::RustAnalyzerProcMacroSrv
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/tools/rust-analyzer})
    - Set({src/tools/rust-analyzer/crates/proc-macro-srv-cli})
