src/bootstrap/src/core/builder/cli_paths/snapshots/x_build_src_tools_rust_analyzer_crates_proc_macro_srv_cli.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: build src/tools/rust-analyzer/crates/proc-macro-srv-cli
---
[Build] tool::RustAnalyzerProcMacroSrv
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/tools/rust-analyzer/crates/proc-macro-srv-cli})
