src/bootstrap/src/core/builder/cli_paths/snapshots/x_check_compiler.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: check compiler
---
[Check] check::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({"compiler"})
    - Set({"compiler/rustc"})
    - Set({"compiler/rustc_abi"})
    - Set({"compiler/rustc_arena"})
    - Set({"compiler/rustc_ast"})
    - Set({"compiler/rustc_ast_ir"})
    - Set({"compiler/rustc_ast_lowering"})
    - Set({"compiler/rustc_ast_passes"})
    - Set({"compiler/rustc_ast_pretty"})
    - Set({"compiler/rustc_attr_parsing"})
    - Set({"compiler/rustc_baked_icu_data"})
    - Set({"compiler/rustc_borrowck"})
    - Set({"compiler/rustc_builtin_macros"})
    - Set({"compiler/rustc_codegen_llvm"})
    - Set({"compiler/rustc_codegen_ssa"})
    - Set({"compiler/rustc_const_eval"})
    - Set({"compiler/rustc_data_structures"})
    - Set({"compiler/rustc_driver"})
    - Set({"compiler/rustc_driver_impl"})
    - Set({"compiler/rustc_error_codes"})
    - Set({"compiler/rustc_error_messages"})
    - Set({"compiler/rustc_errors"})
    - Set({"compiler/rustc_expand"})
    - Set({"compiler/rustc_feature"})
    - Set({"compiler/rustc_fs_util"})
    - Set({"compiler/rustc_graphviz"})
    - Set({"compiler/rustc_hashes"})
    - Set({"compiler/rustc_hir"})
    - Set({"compiler/rustc_hir_analysis"})
    - Set({"compiler/rustc_hir_id"})
    - Set({"compiler/rustc_hir_pretty"})
    - Set({"compiler/rustc_hir_typeck"})
    - Set({"compiler/rustc_incremental"})
    - Set({"compiler/rustc_index"})
    - Set({"compiler/rustc_index_macros"})
    - Set({"compiler/rustc_infer"})
    - Set({"compiler/rustc_interface"})
    - Set({"compiler/rustc_lexer"})
    - Set({"compiler/rustc_lint"})
    - Set({"compiler/rustc_lint_defs"})
    - Set({"compiler/rustc_llvm"})
    - Set({"compiler/rustc_log"})
    - Set({"compiler/rustc_macros"})
    - Set({"compiler/rustc_metadata"})
    - Set({"compiler/rustc_middle"})
    - Set({"compiler/rustc_mir_build"})
    - Set({"compiler/rustc_mir_dataflow"})
    - Set({"compiler/rustc_mir_transform"})
    - Set({"compiler/rustc_monomorphize"})
    - Set({"compiler/rustc_next_trait_solver"})
    - Set({"compiler/rustc_parse"})
    - Set({"compiler/rustc_parse_format"})
    - Set({"compiler/rustc_passes"})
    - Set({"compiler/rustc_pattern_analysis"})
    - Set({"compiler/rustc_privacy"})
    - Set({"compiler/rustc_proc_macro"})
    - Set({"compiler/rustc_public"})
    - Set({"compiler/rustc_public_bridge"})
    - Set({"compiler/rustc_query_impl"})
    - Set({"compiler/rustc_resolve"})
    - Set({"compiler/rustc_sanitizers"})
    - Set({"compiler/rustc_serialize"})
    - Set({"compiler/rustc_session"})
    - Set({"compiler/rustc_span"})
    - Set({"compiler/rustc_symbol_mangling"})
    - Set({"compiler/rustc_target"})
    - Set({"compiler/rustc_thread_pool"})
    - Set({"compiler/rustc_trait_selection"})
    - Set({"compiler/rustc_traits"})
    - Set({"compiler/rustc_transmute"})
    - Set({"compiler/rustc_ty_utils"})
    - Set({"compiler/rustc_type_ir"})
    - Set({"compiler/rustc_type_ir_macros"})
    - Set({"compiler/rustc_windows_rc"})
