src/bootstrap/src/core/builder/cli_paths/snapshots/x_check_compiletest.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: check compiletest
---
[Check] check::Compiletest
    targets: [x86_64-unknown-linux-gnu]
    - Set({"src/tools/compiletest"})
