src/bootstrap/src/core/builder/cli_paths/snapshots/x_check_rustdoc.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: check rustdoc
---
[Check] check::Rustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({"src/tools/rustdoc"})
